@@ -2739,46 +2739,6 @@ public:
     bool isUnlikely() const override { return true; }
     bool same(const AstNode* /*samep*/) const override { return true; }
 };
-class AstFOpen final : public AstNodeStmt {
-    // Although a system function in IEEE, here a statement which sets the file pointer (MCD)
-    // @astgen op1 := filep : AstNodeExpr
-    // @astgen op2 := filenamep : AstNodeExpr
-    // @astgen op3 := modep : AstNodeExpr
-public:
-    AstFOpen(FileLine* fl, AstNodeExpr* filep, AstNodeExpr* filenamep, AstNodeExpr* modep)
-        : ASTGEN_SUPER_FOpen(fl) {
-        this->filep(filep);
-        this->filenamep(filenamep);
-        this->modep(modep);
-    }
-    ASTGEN_MEMBERS_AstFOpen;
-    string verilogKwd() const override { return "$fopen"; }
-    bool isGateOptimizable() const override { return false; }
-    bool isPredictOptimizable() const override { return false; }
-    bool isPure() const override { return false; }
-    bool isOutputter() const override { return true; }
-    bool isUnlikely() const override { return true; }
-    bool same(const AstNode* /*samep*/) const override { return true; }
-};
-class AstFOpenMcd final : public AstNodeStmt {
-    // Although a system function in IEEE, here a statement which sets the file pointer (MCD)
-    // @astgen op1 := filep : AstNodeExpr
-    // @astgen op2 := filenamep : AstNodeExpr
-public:
-    AstFOpenMcd(FileLine* fl, AstNodeExpr* filep, AstNodeExpr* filenamep)
-        : ASTGEN_SUPER_FOpenMcd(fl) {
-        this->filep(filep);
-        this->filenamep(filenamep);
-    }
-    ASTGEN_MEMBERS_AstFOpenMcd;
-    string verilogKwd() const override { return "$fopen"; }
-    bool isGateOptimizable() const override { return false; }
-    bool isPredictOptimizable() const override { return false; }
-    bool isPure() const override { return false; }
-    bool isOutputter() const override { return true; }
-    bool isUnlikely() const override { return true; }
-    bool same(const AstNode* /*samep*/) const override { return true; }
-};
 class AstFinish final : public AstNodeStmt {
 public:
     explicit AstFinish(FileLine* fl)
