@@ -169,9 +169,11 @@ module Vt_debug_emitv_t;
                                  : $c('sh1e)));
             $c(;);
             $display("%d", $c(0));
-            $fopen(72'h2f6465762f6e756c6c);
+            fd = $fopen(72'h2f6465762f6e756c6c);
+            ;
             $fclose(fd);
-            $fopen(72'h2f6465762f6e756c6c, 8'h72);
+            fd = $fopen(72'h2f6465762f6e756c6c, 8'h72);
+            ;
             $fgetc(fd);
             $fflush(fd);
             $fscanf(fd, "%d", sum);
