@@ -13,6 +13,8 @@ Verilator 5.009 devel
 
 **Minor:**
 
+* Support $fopen as an expression.
+
 
 Verilator 5.008 2023-03-04
 ==========================
